--- a/basilio_portfolio.html
+++ b/basilio_portfolio.html
@@ -29,7 +29,7 @@
 
         <div id="content" class="hidden"></div>
     </div>
-
+    <footer>Copyright © <del>1996-1999</del> 2004-2024</footer>
         
 </body>
 </html>
