--- a/basilio_portfolio.html
+++ b/basilio_portfolio.html
@@ -114,15 +114,15 @@
 
         <div class="image-container">
             <a href="javascript:void(0);" onclick="showContent('aboutme');">
-                <img src="1.png" alt="aboutme" class="aboutme">
+                <img src="Rands1.png" alt="aboutme" class="aboutme">
                 <div class="caption">About Me</div>
             </a>
             <a href="javascript:void(0);" onclick="showContent('interests');">
-                <img src="2.png" alt="interests" class="interests">
+                <img src="Rands2.png" alt="interests" class="interests">
                 <div class="caption">Interests</div>
             </a>
             <a href="javascript:void(0);" onclick="showContent('accomplishments');">
-                <img src="3.png" alt="accomplishments" class="accomplishments">
+                <img src="Rands3.png" alt="accomplishments" class="accomplishments">
                 <div class="caption">Accomplishments</div>
             </a>
         </div>
