--- a/test2.html
+++ b/test2.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+
+    <table>
+        <tr>
+            
+        </tr>
+    </table>
     
 </body>
 </html>
